; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/jit/dynasm/extr_minilua.c_gmatch.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/jit/dynasm/extr_minilua.c_gmatch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gmatch_aux = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @gmatch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gmatch(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @luaL_checkstring(i32* %3, i32 1)
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @luaL_checkstring(i32* %5, i32 2)
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @lua_settop(i32* %7, i32 2)
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @lua_pushinteger(i32* %9, i32 0)
  %11 = load i32*, i32** %2, align 8
  %12 = load i32, i32* @gmatch_aux, align 4
  %13 = call i32 @lua_pushcclosure(i32* %11, i32 %12, i32 3)
  ret i32 1
}

declare dso_local i32 @luaL_checkstring(i32*, i32) #1

declare dso_local i32 @lua_settop(i32*, i32) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1

declare dso_local i32 @lua_pushcclosure(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
